--- a/css/about.css
+++ b/css/about.css
@@ -46,10 +46,9 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 150px;
-  border: 3px solid #ec5242;
+  border: 5px solid #ec5242;
   height: 40px;
-  margin-left: 30px;
+  font-size: 11px;
 }
 
 .header-bg {
@@ -85,8 +84,7 @@ header {
 .menu-links {
   display: none;
   position: fixed;
-  background:
-    linear-gradient(
+  background: linear-gradient(
       to right,
       rgba(7, 9, 93, 0.24),
       rgba(24, 23, 23, 0.87)
@@ -143,9 +141,14 @@ header {
   padding-left: 15px;
   padding-top: 100px;
   overflow: hidden;
-  background-image: url("../assets/background-img1.jpg");
+  background-image: url("../assets/background-img-2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.about-message {
+  text-align: center;
+  font-size: 18px;
 }
 
 .about-section-header {
@@ -168,9 +171,9 @@ header {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  border: 2px solid #d3d3d3;
-  background-color: white;
-  text-align: center;
+  justify-content: flex-start;
+  border: 2px solid white;
+  background-color: #d3d3d352;
 }
 
 .about-text p {
@@ -412,6 +415,7 @@ header {
 
   .logo img {
     width: 100%;
+    height: 2em;
   }
 
   .about-wrapper {
@@ -424,7 +428,12 @@ header {
     align-items: center;
     justify-content: center;
     height: 900px;
-    background-image: url("../img/bg.jpg");
+    background-image: url("../assets/background-img-2.jpg");
+  }
+
+  .about-message {
+    text-align: center;
+    font-size: 25px;
   }
 
   .about-section-header {
@@ -471,7 +480,7 @@ header {
 
   .about-text p {
     margin: 15px;
-    font-size: 22px;
+    font-size: 23px;
     color: #272a31;
   }
 
