--- a/css/style.css
+++ b/css/style.css
@@ -548,14 +548,17 @@ footer h2 {
 
   .logo img {
     width: 100%;
+    height: 2em;
   }
 
   #leehar-line-lg {
+   
+    display: flex;
+    align-items: center;
     justify-content: center;
-    width: 150px;
-    border: 3px solid #ec5242;
-    height: 75px;
-    margin-left: 30px;
+    border: 5px solid #ec5242;
+    height: 40px;
+    font-size: 11px;
   }
 
   .home-wrapper {
@@ -587,7 +590,7 @@ footer h2 {
   }
 
   .home-text {
-    width: 70%;
+    width: 100%;
     margin-bottom: 50px;
   }
 
