fix: linter fix

--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,7 @@ header {
 .menu-links {
   display: none;
   position: fixed;
-  background:
-    linear-gradient(
+  background: linear-gradient(
       to right,
       rgba(7, 9, 93, 0.24),
       rgba(24, 23, 23, 0.87)
@@ -552,7 +551,6 @@ footer h2 {
   }
 
   #leehar-line-lg {
-   
     display: flex;
     align-items: center;
     justify-content: center;
