--- a/css/about.css
+++ b/css/about.css
@@ -84,12 +84,7 @@ header {
 .menu-links {
   display: none;
   position: fixed;
-  background: linear-gradient(
-      to right,
-      rgba(7, 9, 93, 0.24),
-      rgba(24, 23, 23, 0.87)
-    ),
-    url("../assets/background-img1.jpg");
+  background: linear-gradient(to right, rgba(7, 9, 93, 0.24), rgba(24, 23, 23, 0.87)), url("../assets/background-img1.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -170,7 +165,6 @@ header {
 .about-text {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
   justify-content: flex-start;
   border: 2px solid white;
   background-color: #d3d3d352;
